--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-"Hello World!"
+<!DOCTYPE html>
+<html>
+	<script type="module" src="https://md-block.verou.me/md-block.js"></script>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Sword Art Online: Fractal Daydream Wiki</title>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<md-block src="wiki/verstärken.md" render="content">
+		</md-block>
+	</body>
+</html>
+
