--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<md-block src="wiki/verstärken.md" render="content">
+		<md-block src="wiki/enhance.md" render="content">
 		</md-block>
 	</body>
 </html>
