Add weaponeffects.md to index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<md-block src="wiki/enhance.md" render="content">
-		</md-block>
+		<md-block src="wiki/weaponeffects.md"> [!] Waffeneffekte konnten nicht geladen werden. </md-block>
+		<md-block src="wiki/enhance.md"> [!] Verstärkungskosten konnten nicht geladen werden. </md-block>
 	</body>
 </html>
 
