--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<script type="module" src="https://md-block.verou.me/md-block.js"></script>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="color-scheme" content="light dark" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Sword Art Online: Fractal Daydream Wiki</title>
 		<link rel="stylesheet" href="styles.css">
