--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<md-block src="wiki/weaponeffects.md"> [!] Waffeneffekte konnten nicht geladen werden. </md-block>
-		<md-block src="wiki/enhance.md"> [!] Verstärkungskosten konnten nicht geladen werden. </md-block>
+		<div class="header">
+			<h1> Sword Art Online: Fractal Daydream Wiki </h1>
+		</div>
+
+		<div class="content">
+		<md-block src="wiki/enhance.md">
+			[!] Verstärkungskosten konnten nicht geladen werden.
+		</md-block>
+		<md-block src="wiki/weaponeffects.md">
+			[!] Waffeneffekte konnten nicht geladen werden. 
+		</md-block>
+		</div>
 	</body>
 </html>
 
