--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 		</div>
 
 		<div class="content">
-		<md-block src="wiki/enhance.md">
-			[!] Verstärkungskosten konnten nicht geladen werden.
-		</md-block>
-		<md-block src="wiki/weaponeffects.md">
-			[!] Waffeneffekte konnten nicht geladen werden. 
-		</md-block>
+			<h1> Verstärkungskosten für Waffen und Zubehör </h1>
+			<md-block src="wiki/enhance.md">
+				[!] Verstärkungskosten konnten nicht geladen werden.
+			</md-block>
+			<h1> Einzigartige Spezialeffekte für Legendäre Waffen </h1>
+			<md-block src="wiki/weaponeffects.md">
+				[!] Waffeneffekte konnten nicht geladen werden. 
+			</md-block>
+			<h1> Einzigartige Spezialeffekte für Legendäres Zubehör </h1>
+			<md-block src="wiki/accessoryeffects.md">
+				[!] Waffeneffekte konnten nicht geladen werden. 
+			</md-block>
 		</div>
 	</body>
 </html>
